# Cyanobloom-Simulation

./: .gitignore  CMakeLists.txt  README.md  package.xml  readme.txt
Matlab_Scripts/: callback_pointmsg.m  visualization.m
cyanob_phd_filter/: CMakeLists.txt  package.xml
cyanob_phd_filter/launch/: .God 2.launch.icloud  God.launch  gazebo_blooms_publisher.launch  parallel_system_only.launch  phdfilter.launch
cyanob_phd_filter/msg/: .diagnostics 2.msg.icloud
include/: plugin_drone.h
jess_sat_data/: .hotspots_monthyear.csv.icloud  water_boundary_points_scaled.txt
launch/: test_AR.launch  yawgoog_pond.launch
openstreetmap_data_files/: BarbersPond.osm  SabattusPond.osm
src/: DialogKeyboard.cpp  GT_generation_v0.5.py  GT_generation_v1.0a.py  GT_generation_v1.0b.py  GT_generation_v2.0.py  Plotter.py  bloom_coordinate_creator_multivariate_normal_entire_pond.py  bloom_coordinate_creator_multivariate_normal_wind_model.py  bloom_coordinte_creator_wind_drift.py  bloom_density_at_USV_location.py  bloom_finder.py  bloom_probabilities_&_GUI.py  check_img_hsv_range.py  command_drone_velocities.py  drone_camera_AR.py  drone_command_velocities.py  drone_object_ros.cpp  drone_positioning_manager.py  gps_to_xyz_node.py  graph_making_practice.py  ground_truth_genesis_&_GUI.py  ground_truth_vs_estimate_plotter.py  initial_ground_truth.py  making_complex_polygons_and_intersections_practice.py  maps_lake_contours.py  plugin_drone.cpp  practice.py  test_img_hsv_range.py  waypoint_manager.py
urdf/: wamv_gazebo.urdf.xacro
worlds/: YawgoogPond.world  test_AR.world
(+9440 files in other folders)
