<?xml version="1.0"?>
<package format="2">
  <name>cyanobloom-simulation</name>
  <version>0.0.0</version>
  <description>The cyanobloom-simulation package</description>

  <maintainer email="andrewtp32@gmail.com">Drew Phillips</maintainer>

  <license>MIT</license>

  <author email="andrewtp32@gmail.com">Drew Phillips</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
